--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Universal styles */
 * {
   box-sizing: border-box;
 }
@@ -20,4 +21,115 @@ h6 {
 
 p {
   margin: 0;
+}
+
+/* logo / nav    style */
+
+header {
+  background-color: aquamarine;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10px;
+}
+nav {
+  padding: 15px 4%;
+}
+header h1 {
+  background-color: blanchedalmond;
+  color: darkred;
+  font-size: 55px;
+  font-style: italic;
+  padding: 10px 30px 10px 75px;
+}
+.navbar {
+  display: flex;
+  list-style: none;
+}
+.navbar li {
+  padding: 2px;
+  margin-left: 25px;
+
+}
+.navbar a {
+  color: rgb(173, 135, 222);
+  font-size: 25px;
+  text-decoration: double;
+  padding: 5px 15px;
+  border-bottom: 4px solid rgb(173, 135, 222);
+}
+
+/* Hero style */
+
+.hero-banner {
+  background-image: url(../images/02-hero-bg.jpg);
+  background-position: bottom;
+  background-size: cover;
+  height: 200px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  }
+.hero-banner h2 {
+  background-color: rgb(173, 135, 222);
+  padding: 5px 10px;
+  margin-left: 1300px;
+  font-style: oblique;
+}
+
+/* Main section style */
+.page-wrapper {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  padding-bottom: 120px; 
+  margin: 40px auto 0px auto; 
+  object-fit: cover;
+
+}
+.page-section {
+  border-right: 4px solid blue;
+  text-align: center;
+  padding-right: 15px;
+}
+h2 {
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 120px;
+  /* font-size: 1em; */
+  color: mediumspringgreen;
+}
+.img {
+  width: 40rem;
+  margin: 0% 2% 1% 0;
+  border: 2px solid rgb(173, 135, 222);
+  float: left;
+  cursor: pointer;
+  
+}
+.img:hover {
+  background-color: bisque;
+}
+p {
+  position: sticky;
+  color: black;
+  line-height: 3.5;
+  font-size: 1.5em;
+  display: flex;
+  align-items: center;
+}
+
+
+@media only screen and (max-width: 820px) {
+  h1 {
+    padding-top: 5em;
+    font-size: 4em;
+  }
+}
+  
+@media only screen and (max-width: 590px) {
+  h1 {
+    font-size: 3em;
+  }
 }
